(#6) Fix commitlint workflow reference.

--- a/.github/workflows/ocpl_cm_standards_check.yml
+++ b/.github/workflows/ocpl_cm_standards_check.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           repository: NCIOCPL/.github
           # This URL will need to be updated when we want to bump to a new version
-          ref: workflows-v1
+          ref: workflow/v1
           path: commitlint
       - name: Commitlint
         uses: wagoid/commitlint-github-action@v5
